--- a/css/style-index.css
+++ b/css/style-index.css
@@ -5,9 +5,10 @@ header{
 
 nav {
     text-align: right;
+    background-color: chocolate;
 }
 main{
-    background-color: rgb(241, 161, 161);
+    background-color: rgb(198, 88, 88);
 }
 footer{
     background-color: rgba(203, 132, 73, 0.683);
@@ -15,20 +16,63 @@ footer{
 body {
     background-color: rgb(174, 228, 152);
 }
-#imgSet{
-    float: left;
-    margin-right: 150px;
-    margin-left: 50px;
+#drawForm{
+    border: 5px solid;
+    border-color: aqua;
+}
+#drawOptions{
+    display: flex;
+    justify-content: space-between;   
+    align-items: center;
+    margin-bottom: 20px;
+    padding-top: 20px;
+    padding-left: 80px;
+    padding-right: 80px;
+
+    border: 5px solid;
+    border-color: rgb(0, 255, 72);
+
+}
+#imgSet, #imgSetFlip{
+    flex: 1;
+    background-color: rgb(248, 187, 187);
+    margin-bottom: 10px;
+    border: 5px solid;
+    border-color: rgb(255, 251, 0);
 }
 
-form{
+#firstQuestion{
+    margin-bottom: 10px;
+    background-color: rgb(255, 190, 173);
+    border: 5px solid;
+    border-color: rgb(242, 255, 0);
+}
+
+form{ 
+}
+#drawbttnarea{
     text-align: center;
+    background-color: rgb(255, 204, 235);
+    color: rgb(246, 0, 0);
+    padding: 10px 20px;
+    border: none;
+    border-radius: 8px;
+    margin-bottom: 10px;
+    border: 5px solid;
+    border-color: rgb(64, 0, 255);
+
 }
 #drawbttn{
-    clear: both;
-    width: 100px;
+    background-color: rgb(166, 255, 255);
+    color: rgb(246, 0, 0);
+    padding: 10px 20px;
+    border-radius: 8px;
+    cursor: pointer;
+    border: 5px solid;
+    border-color: rgb(190, 168, 255);
+}
+#registerMessage{
     text-align: center;
-    margin-top: 50px;
-    border: 0;
-    box-shadow: 0 0 10px 10px rgb(255, 226, 167);
+    border: 5px solid;
+    border-color: rgb(255, 0, 0);
 }
