--- a/css/style-index.css
+++ b/css/style-index.css
@@ -1,28 +1,68 @@
 header{
-    background-color: rgb(255, 158, 158);
+    background-color: rgba(255, 179, 179, 0);
+    padding-top: 5px;
+}
+
+h1 {
+    margin: 0;
     text-align: center;
 }
 
-nav {
-    text-align: right;
-    background-color: chocolate;
+h4{
+    padding-bottom: 5px;
+    text-align: center;
 }
+
+#headBttn{
+    position: absolute;
+    right: 10px;
+}
+#headBttn button{
+    
+    padding-left: 10px;
+    background-color: rgba(189, 223, 255, 0.544);
+    color: rgb(0, 0, 0);
+    cursor: pointer;
+    border-radius: 10px;
+}
+
 main{
-    background-color: rgb(198, 88, 88);
+    background-color: rgba(234, 249, 190, 0);
 }
+
 footer{
-    background-color: rgba(203, 132, 73, 0.683);
+    text-align: center;
+    color: rgb(0, 0, 0);
+    background-color: rgb(202, 193, 150);
 }
+
 body {
-    background-color: rgb(174, 228, 152);
+    background-image: url(naturebackground.jpg);
+    background-position: center;
+    background-attachment: fixed;
+    background-size: cover;
 }
+
 #drawForm{
+    
     border: 5px solid;
-    border-color: aqua;
+    border-color: rgba(119, 255, 126, 0);
 }
 #drawOptions{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 60px;
+    padding: 10px;
+    background-color: rgba(212, 207, 160, 0);
+    -webkit-mask-image: radial-gradient(ellipse at center, black 60%, transparent 100%);
+    mask-image: radial-gradient(ellipse at center, black 60%, transparent 100%);
+    /*
     display: flex;
-    justify-content: space-between;   
+    justify-content: center;   
+    gap: 40px;
+    flex-wrap: wrap;
+    padding: 20px;
+    box-sizing: border-box;
     align-items: center;
     margin-bottom: 20px;
     padding-top: 20px;
@@ -31,48 +71,47 @@ body {
 
     border: 5px solid;
     border-color: rgb(0, 255, 72);
+    */
 
 }
 #imgSet, #imgSetFlip{
     flex: 1;
-    background-color: rgb(248, 187, 187);
+    background-color: rgba(248, 242, 187, 0.44);
     margin-bottom: 10px;
     border: 5px solid;
-    border-color: rgb(255, 251, 0);
+    border-color: rgba(136, 136, 100, 0.636);
+    border-radius: 15px;
+
 }
 
 #firstQuestion{
     margin-bottom: 10px;
-    background-color: rgb(255, 190, 173);
-    border: 5px solid;
-    border-color: rgb(242, 255, 0);
-}
 
-form{ 
 }
 #drawbttnarea{
-    text-align: center;
-    background-color: rgb(255, 204, 235);
-    color: rgb(246, 0, 0);
+    text-align: center;   
     padding: 10px 20px;
-    border: none;
-    border-radius: 8px;
-    margin-bottom: 10px;
-    border: 5px solid;
-    border-color: rgb(64, 0, 255);
-
 }
 #drawbttn{
-    background-color: rgb(166, 255, 255);
-    color: rgb(246, 0, 0);
+    background-color: rgba(255, 227, 168, 0.65);
+    color: rgb(0, 0, 0);
     padding: 10px 20px;
     border-radius: 8px;
-    cursor: pointer;
-    border: 5px solid;
-    border-color: rgb(190, 168, 255);
+    width: 120px;
+    height: 40px;
+    cursor: pointer; 
+    -webkit-mask-image: radial-gradient(ellipse at center, rgb(231, 152, 152) 60%, transparent 100%);
+    mask-image: radial-gradient(ellipse at center, rgb(200, 149, 149) 60%, transparent 100%);
 }
 #registerMessage{
+    background-color: rgba(235, 253, 182, 0.621);
     text-align: center;
     border: 5px solid;
-    border-color: rgb(255, 0, 0);
+    border-color: rgba(255, 175, 175, 0.525);
+    -webkit-mask-image: radial-gradient(ellipse at center, black 60%, transparent 100%);
+    mask-image: radial-gradient(ellipse at center, black 60%, transparent 100%);
+}
+.inputGroup {
+    text-align: center;
+    align-items: center;
 }
